--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,9 @@
   "manifest_version": 2,
   "homepage_url": "https://github.com/Skeletonxf/image-extract",
   "name": "Image extract",
-  "version": "1.1",
+  "version": "1.2",
 
-  "permissions": ["contextMenus", "activeTab", "tabs"],
+  "permissions": ["contextMenus", "activeTab", "storage"],
 
   "background": {
     "scripts": ["background.js"]
@@ -21,10 +21,7 @@
     "default_title": "Image extract"
   },
 
-  "applications": {
-    "gecko": {
-      "id": "image@example.com",
-      "strict_min_version": "42.0"
-    }
+  "options_ui": {
+    "page": "/settings/settings.html"
   }
 }
