Refactor to use ES6 module system and ES7 await syntax, add better visual seperation on viewer settings

--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
   "permissions": ["contextMenus", "activeTab", "storage"],
 
   "background": {
-    "scripts": ["background.js", "/settings/defaults.js", "/core/util.js"]
+    "page": "/background/index.html"
   },
 
   "browser_action": {
