--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "manifest_version": 2,
   "homepage_url": "https://github.com/Skeletonxf/image-extract",
   "name": "Image extract",
-  "version": "1.5.0",
+  "version": "1.5.1",
 
   "permissions": ["contextMenus", "activeTab", "storage"],
 
@@ -13,11 +13,7 @@
 
   "browser_action": {
     "browser_style": true,
-    "default_icon": {
-       "16": "icons/arrow-16.png",
-       "32": "icons/arrow-32.png",
-       "64": "icons/arrow-64.png"
-    },
+    "default_icon": "icons/arrow.svg",
     "default_title": "Image extract"
   },
 
