Migrate to manifest v3
Swapped out all the pre async/await syntax helpers in core.js for new async/await based ones used in ongoing Duplicate Tab migration. Everything else is largely just cleanup and migrating to a more class based arch as in the ongoing Duplicate Tab migration work. Image Extract *has* no state, so migrating to a non persited background page works very smoothly. Left the content script more or less alone, just merged the files and fixed a weird bug where looking up the imageData for the image would fail if both were empty strings. Just storing the image DOM element in the imageData solves the problem by removing the lookup entirely

--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,23 @@
 {
   "description": "Pulls images out of the current tab",
-  "manifest_version": 2,
+  "manifest_version": 3,
   "homepage_url": "https://github.com/Skeletonxf/image-extract",
   "name": "Image extract",
-  "version": "1.5.1",
+  "version": "2.0",
 
-  "permissions": ["contextMenus", "activeTab", "storage"],
+  "permissions": ["contextMenus", "activeTab", "storage", "scripting"],
 
   "background": {
-    "page": "/background/index.html"
+    "page": "/background-page.html"
   },
 
-  "browser_action": {
+  "browser_specific_settings": {
+    "gecko": {
+      "strict_min_version": "112.0"
+    }
+  },
+
+  "action": {
     "browser_style": true,
     "default_icon": "icons/arrow.svg",
     "default_title": "Image extract"
