Set id from AMO since mv3 extensions make it mandatory

--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,8 @@
 
   "browser_specific_settings": {
     "gecko": {
-      "strict_min_version": "112.0"
+      "id": "{6381b0dc-8bef-47d0-8c31-6fffbdd8ec7f}",
+      "strict_min_version": "111.0"
     }
   },
 
